--- a/MyMapsGeTypeScript/MyMapsGeTypeScript.csproj
+++ b/MyMapsGeTypeScript/MyMapsGeTypeScript.csproj
@@ -10,9 +10,9 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
-    <TypeScriptEmitDecoratorMetadata>True</TypeScriptEmitDecoratorMetadata>
-    <TypeScriptExperimentalDecorators>True</TypeScriptExperimentalDecorators>
-    <TypeScriptToolsVersion>1.5</TypeScriptToolsVersion>
+    <TypeScriptEmitDecoratorMetadata>true</TypeScriptEmitDecoratorMetadata>
+    <TypeScriptExperimentalDecorators>true</TypeScriptExperimentalDecorators>
+    <TypeScriptToolsVersion>1.6</TypeScriptToolsVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -816,6 +816,12 @@
     <Content Include="components\jquery.ui\jquery.ui.js" />
     <Content Include="components\jquery.ui\jquery.ui.sortable.min.js" />
     <Content Include="components\jquery\jquery.min.js" />
+    <Content Include="components\leaflet-routing\leaflet-routing-machine.css" />
+    <Content Include="components\leaflet-routing\leaflet-routing-machine.js" />
+    <Content Include="components\leaflet-routing\leaflet-routing-machine.min.js" />
+    <Content Include="components\leaflet-routing\leaflet.routing.icons.png" />
+    <Content Include="components\leaflet-routing\leaflet.routing.icons.svg" />
+    <Content Include="components\leaflet-routing\routing-icon.png" />
     <Content Include="components\leaflet.geomanager\geoman.all.min.js" />
     <Content Include="components\leaflet.geomanager\img\1x1.png" />
     <Content Include="components\leaflet.geomanager\img\bing-aerial.png" />
@@ -880,15 +886,34 @@
     <Content Include="components\prettify\prettify.css" />
     <Content Include="components\prettify\prettify.js" />
     <Content Include="css\tass.css" />
+    <Content Include="ge\mymaps\map\controllers\LocatorController.js" />
+    <Content Include="ge\mymaps\map\core\LatLng.js" />
+    <Content Include="ge\mymaps\map\data\GeMapObject.js" />
+    <Content Include="ge\mymaps\map\data\GeOrganization.js" />
+    <Content Include="ge\mymaps\map\data\LocatorMapObject.js" />
     <Content Include="ge\mymaps\map\data\MapType.js" />
     <Content Include="ge\mymaps\map\data\MapTypesProvider.js" />
+    <Content Include="ge\mymaps\map\data\MarkerMapObject.js" />
+    <Content Include="ge\mymaps\map\events\LongPressDetail.js" />
+    <Content Include="ge\mymaps\map\events\LongPressInfo.js" />
+    <Content Include="ge\mymaps\map\events\MarkerPressDetail.js" />
     <Content Include="ge\mymaps\map\MapsGeEvent.js" />
     <Content Include="ge\mymaps\map\MapsGeFacade.html" />
     <Content Include="ge\mymaps\map\MapsGeFacade-test.html" />
+    <Content Include="ge\mymaps\map\MapsGeFacade.js" />
+    <Content Include="ge\mymaps\map\utils\AbstractRouteProvider.js" />
+    <Content Include="ge\mymaps\map\utils\Geocoder.js" />
+    <Content Include="ge\mymaps\map\utils\GoogleRouteProvider.js" />
+    <Content Include="ge\mymaps\map\utils\Locale.js" />
+    <Content Include="ge\mymaps\map\utils\Locator.js" />
+    <Content Include="ge\mymaps\map\utils\Router.js" />
+    <Content Include="ge\mymaps\map\view\GeMapView.html" />
+    <Content Include="ge\mymaps\map\view\GeMapView.js" />
+    <Content Include="ge\mymaps\map\view\MapTypeItemRenderer.js" />
     <Content Include="ge\mymaps\map\view\MapTypeList-test.html" />
     <Content Include="ge\mymaps\map\view\MapTypeList.html" />
+    <Content Include="ge\mymaps\map\view\MapTypeList.js" />
     <Content Include="ge\mymaps\map\view\TbilisiMapView-test.html" />
-    <Content Include="ge\mymaps\map\view\TbilisiMapView.html" />
     <Content Include="index.html" />
     <Content Include="ru\flaps\data\ErrorVO.js" />
     <Content Include="ru\flaps\data\ItemVO.js" />
@@ -897,6 +922,7 @@
     <Content Include="ru\flaps\data\RequestVO.js" />
     <Content Include="ru\flaps\data\ResponseVO.js" />
     <Content Include="ru\flaps\events\EventDispatcher.js" />
+    <Content Include="ru\flaps\uihelpers\RoundProgress.js" />
     <Content Include="ru\flaps\utils\FunctionAddons.js" />
     <Content Include="ru\tass\BaseTassController.js" />
     <Content Include="ru\tass\data\CarouselVO.js" />
@@ -941,16 +967,34 @@
   <ItemGroup>
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="bower_components\polymer-ts\polymer-ts.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\controllers\LocatorController.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\core\LatLng.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\data\GeMapObject.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\data\GeOrganization.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\data\LocatorMapObject.ts" />
     <TypeScriptCompile Include="ge\mymaps\map\data\MapType.ts" />
     <TypeScriptCompile Include="ge\mymaps\map\data\MapTypesProvider.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\data\MarkerMapObject.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\events\LongPressDetail.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\events\LongPressInfo.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\events\MarkerPressDetail.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\MapsGeEvent.ts" />
     <TypeScriptCompile Include="ge\mymaps\map\MapsGeFacade.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\utils\AbstractRouteProvider.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\utils\AbstractGeocoder.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\utils\Geocoder.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\utils\GoogleRouteProvider.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\utils\Locale.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\utils\Locator.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\utils\Router.ts" />
+    <TypeScriptCompile Include="ge\mymaps\map\view\GeMapView.ts" />
     <TypeScriptCompile Include="ge\mymaps\map\view\MapTypeList.ts" />
-    <TypeScriptCompile Include="ge\mymaps\map\view\TbilisiMapView.ts" />
     <TypeScriptCompile Include="ru\flaps\data\ErrorVO.ts" />
     <TypeScriptCompile Include="ru\flaps\data\ObjectVO.ts" />
     <TypeScriptCompile Include="ru\flaps\data\RequestVO.ts" />
     <TypeScriptCompile Include="ru\flaps\data\ResponseVO.ts" />
     <TypeScriptCompile Include="ru\flaps\events\EventDispatcher.ts" />
+    <TypeScriptCompile Include="ru\flaps\uihelpers\RoundProgress.ts" />
     <TypeScriptCompile Include="ru\flaps\utils\FunctionAddons.ts" />
     <TypeScriptCompile Include="ru\tass\data\CarouselVO.ts" />
     <TypeScriptCompile Include="ru\tass\data\TassAppModel.ts" />
@@ -972,6 +1016,8 @@
     <TypeScriptCompile Include="ru\transistor\view\ItemList.ts" />
     <TypeScriptCompile Include="ru\transistor\view\LoginForm.ts" />
     <TypeScriptCompile Include="Scripts\typings\backbone\backbone.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\google.maps.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\greenshock\greenshock.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\leaflet\leaflet.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\socket.io-client\socket.io-client.d.ts" />
@@ -1372,8 +1418,6 @@
     <Content Include="components\leaflet.geomanager\layers\bing-google-yandex.LICENSE" />
     <Content Include="css\npm-debug.log" />
     <Content Include="css\tass.styl" />
-    <Content Include="ge\mymaps\map\data\MapType.js.map" />
-    <Content Include="ge\mymaps\map\data\MapTypesProvider.js.map" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
